# core-graph

./: .editorconfig  .gitignore  .markdownlint.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  artifact-index.yaml  pyproject.toml  zarf.yaml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature-request.md  schema-change.md  security.md
.github/workflows/: lint.yml  security.yml  test.yml
api/: config.py  db.py
api/authz/: cerbos.py  schema.zed  spicedb.py
api/mcp/: server.py
api/rest/: main.py
api/taxii/: collections.py  models.py  server.py
api/utils/: age_query_guard.py  cypher_safety.py
deploy/docker/: Dockerfile.app  Dockerfile.postgres  docker-compose.yml  initdb.sh  pg_hba-hardened.conf  postgresql-hardened.conf  prometheus.yml
deploy/nats/: accounts.conf  nats-server-prod.conf  nats-server.conf
docs/: README.md
docs/architecture/: authorization-model.md  data-residency.md  iam-layer.md  overview.md  rls-age-integration.md
docs/compliance/: bsi-grundschutz-map.md  nis2-controls.md
docs/ontology/: ocsf-normalization.md  schema-design.md  stix-mapping.md
docs/operations/: backup-restore.md  break-glass.md  pg-major-upgrade.md  postgresql-hardening.md
docs/skills/: README.md
evidence/chain/: merkle.py  verify.py
evidence/signing/: minio.py  sign.py  timestamp.py
ingest/: canonical.py  graph_writer.py  metrics.py
ingest/connectors/: README.md  base.py
ingest/dlq/: processor.py
ingest/ner/: tier1_regex.py
ingest/resolver/: dedup.py
policies/: derived_roles.yaml
policies/resource/: evidence_record.yaml  identity_attribution.yaml  incident.yaml  threat_entity.yaml
schema/migrations/: 001_extensions.sql  002_graph_schema.sql  003_vector_tables.sql  004_rls_policies.sql  005_audit_tables.sql  006_temporal.sql  007_dlq_archive.sql  008_audit_immutability.sql  009_infra_layer.sql  010_iam_layer.sql  011_vector_dimensions.sql  012_scheduled_jobs.sql  013_dlq_first_failed_default.sql  014_rls_nullif_guard.sql  015_merkle_root_table.sql  016_merkle_scheduled_job.sql  017_age_indexes.sql  018_dlq_error_class.sql  019_embedding_metadata.sql  README.md
schema/seed/: roles.sql  stix-vocabularies.sql
scripts/: bootstrap.sh  init-minio.sh  stamp_merkle_roots.py  validate.py
scripts/bench/: README.md  bench_graph_traversal.py  bench_ingest_throughput.py  bench_ner_extraction.py
tests/: test_age_query_guard.py  test_cypher_safety.py  test_dlq_classifier.py  test_embedding_circuit_breaker.py  test_label_safety_coverage.py  test_merkle.py  test_migration_numbering.py  test_tool_label_safety.py
tests/auth/: cerbos_policies_test.yaml  test_cerbos_policies.yaml
(+143 files in other folders)
