[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "core-graph"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "jellyfish>=1.0",
]

[tool.setuptools.packages.find]
include = ["ingest"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
