[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "core-graph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.1",
  "nats-py>=2.7",
  "redis>=7.4.0",
  "pydantic>=2.5",
  "mcp>=1.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "PyJWT[crypto]>=2.12.1",
  "authzed>=1.0",
  "cerbos>=0.10",
  "pyzmq>=25.0",
  "minio>=7.2",
  "prometheus-client>=0.25.0",
  "psycopg-pool>=3.2",
  "rfc3161ng>=2.1",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=0.23",
  "jellyfish>=1.0",
  "httpx>=0.27",
]
misp = [
  "misp-stix>=2.4",
]
dev = [
  "ruff>=0.4",
  "yamllint>=1.35",
]

[tool.setuptools.packages.find]
include = ["ingest", "ingest.*", "api", "api.*", "evidence", "evidence.*", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "S"]
ignore = ["S101", "S104", "S603", "S607", "S608"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106"]
"scripts/bench/**" = ["S110", "S311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Docker stack (deselect with '-m not integration')",
]
